<resources>
    <string name="app_name">NotBank</string>
    <string name="register">Regístrate</string>
    <string name="login">Ingresa</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="finish">Finalizar</string>
    <string name="next">Siguiente</string>
    <string name="back">Regresar</string>
    <string name="warning">Advertencia</string>
    <string name="zero">0.00</string>
    <string name="email_contact">contacto@sudtechnologies.com</string>
    <string name="credit_card">Tarjeta de Crédito</string>
    <string name="loan_type">Tipo de Préstamo</string>
    <string name="account_number">Numero de Cuenta</string>
    <string name="loan_amount">Monto Solicitado</string>
    <string name="amount">Monto</string>
    <string name="total_amount">Monto</string>
    <string name="empty_history">No tienes movimientos aún</string>
    <string name="credit_card_hiden">**** **** **** %s</string>
    <string name="disposition_money">Disposición Efectivo</string>
    <string name="credit_evaluation">Evaluación Crediticia</string>
    <string name="action_search">Busqueda</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="action_price">Lev. Precios</string>
    <string name="splash_disposition_text">Aquí podrás retirar efectivo desde tus tarjetas de crédito para ser depositadas en tus cuentas y convertilos en efectivo, todo a la mejor tarifa.</string>
    <string name="splash_credit_text">Aquí podrás temporalmente conocer que instituciones están dispuestas a darte un préstamo y las tasas aproximadas del mercado</string>
    <string name="splash_dolar_text">¡Pronto esta opción estará habilitada para ti! Podrás comprar y vender dólares de la forma más rápida y segura.</string>
    <string name="making_impruvements">Haciendo mejoras</string>
    <string name="dialog_help">Necesito Ayuda</string>
    <string name="dialog_help_msg">Si tienes dudas o inquietudes, por favor comunicate con nosotros s nuestra central:</string>
    <string name="dialog_help_email"><![CDATA[<u>%s</u>]]></string>
    <string name="dialog_help_email_info">clozano@sudtechnologies.com</string>
    <string name="dialog_change_price">Nuevo Precio de Compra</string>
    <string name="dialog_purchased_count">Ingrese la cantidad comprada</string>
    <string name="dialog_change_quantity_delivered">Cantidad a embolsar</string>
    <string name="dialog_coment">Comentario</string>
    <string name="dialog_price_quantity">Ingrese todos los campos</string>
    <string name="dialog_change_pass">Cambiar Contraseña</string>
    <string name="dialog_change_pass_msg">*De preferencia utilice letras Mayusculas y/o números para mayor seguridad</string>
    <string name="dialog_user">Usuario</string>
    <string name="label_hashtag">#</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_ok">Aceptar</string>
    <string name="label_today">Hoy</string>
    <string name="label_of">de</string>
    <string name="signature">Firma del cliente</string>
    <string name="label_purchase_info">Información de la venta</string>
    <string name="label_purchase_date">Fecha de Compra</string>
    <string name="label_delivery_date">Fecha de Entrega</string>
    <string name="label_purchase_time">Hora de Entrega</string>
    <string name="label_payment_method">Método de Pago</string>
    <string name="label_payment_status">Estado del Pago</string>
    <string name="label_subtotal">Sub-total</string>
    <string name="label_total">Total</string>
    <string name="label_delivery">Delivery</string>
    <string name="label_purchase_detail_info">Detalles de la venta</string>
    <string name="str_take_pic">Tomar Foto</string>
    <string name="str_take_pic_info">Por seguridad, tomate una foto junto a tu DNI</string>
    <string name="str_signature">Realizar Firma</string>
    <string name="str_signature_info">La Firma es necesaria en cada trasacción emitida</string>
    <string name="str_finish_proccess">Finalizar Proceso</string>
    <string name="str_login_failed">El correo o contraseña son incorrectos</string>
    <string name="str_login_failed_pass">La contraseña es incorrecta</string>
    <string name="str_login_email_valid">Ingrese su correo</string>
    <string name="str_login_email_format">Ingrese un correo válido</string>
    <string name="str_login_password_valid">Ingrese su Contraseña</string>
    <string name="str_error_empty">Campo vacio</string>
    <string name="str_oh_no">Oh, no!</string>
    <string name="str_loading">Cargando…</string>
    <string name="str_subject">Preguntas Zeta (Android)</string>
    <string name="str_lose_pass_ok">Su nueva contraseña llegará en minutos a su correo</string>
    <string name="str_no_items">Sin items aún</string>
    <string name="str_no_orders">Sin ordenes aún</string>
    <string name="str_no_prices">Aún no puedes levantar precios</string>
    <string name="str_no_items_details">No desesperes, tus items llegarán pronto</string>
    <string name="str_no_orders_details">No desesperes, tus ordenes llegarán pronto</string>
    <string name="str_no_prices_details">No desesperes, seguro en momentos te asignaran la tarea</string>
    <string name="str_verify_connection">comprueba tu conexión\n a internet</string>
    <string name="str_verify_connection_server">Si el problema persiste contacte a soporte técnico de la app</string>
    <string name="str_error_internet">Estamos presentando problemas de conexión por causas del internet, por favor inténtelo de nuevo</string>
    <string name="str_unknow_rest_error">Error de comunicación desconocido</string>
    <string name="str_unknow_validate_mnessage_error">Error desconocido</string>
    <string name="str_error_app">Error interno de la app, inténtelo de nuevo, si el problema persiste contacte al proveedor de la applicación</string>
    <string name="str_error_lose_pass">Ingrese el correo electronico para recuperar la contraseña</string>
    <string name="str_error_sesion">Se ha iniciado sesión en otro dispositivo con su cuenta, le recomendamos iniciar sesión de nuevo, recuerde que las sesiones multiples no estan permitidas</string>
    <string name="str_error_uploading_file">Error al subir la firma, causado por:</string>
    <string name="str_error_quantity">La cantidad debe ser mayor o igual a la requerida</string>
    <string name="str_pass_current_error">Contraseña actual Incorrecta</string>
    <string name="msg_orders_list">Ordenes agrupadas por feCHa de entrega</string>
    <string name="msg_provider_list">Items agrupados por proveedor</string>
    <string name="blank_2_string_ss">%s - %s</string>
    <string name="blank_2_string_ns">%s%s</string>
    <string name="blank_2_string_s">%s %s</string>
    <string name="blank_soles">S/%,.2f</string>
    <string name="blank_decimal">%.2f</string>
    <string name="blank_date">%s/%s/%d</string>
    <string name="blank_not_found">No se encontró \"%s\"</string>
    <string name="str_step_1">Paso 1</string>
    <string name="str_step_2">Paso 2</string>
    <string name="str_step_3">Paso 3</string>
    <string name="str_personal">Cuenta Destino</string>
    <string name="str_personal_credit">Personal</string>
    <string name="str_other_count">Datos de la Tarjeta</string>
    <string name="str_btn_payment">Proceder al Pago</string>
    <string name="str_btn_evaluate">Proceder la Evaluación</string>
    <string name="hint_fullname">Nombres y Apellidos</string>
    <string name="hint_name_card">Nombre del titular de la tarjeta</string>
    <string name="hint_name">Nombre(s)</string>
    <string name="hint_lastname">Apellido(s)</string>
    <string name="hint_email">Correo</string>
    <string name="hint_cel">Celular</string>
    <string name="hint_amount">Monto recibir (S/)</string>
    <string name="hint_cost">Monto a Cobrar, %s\%% adicional (S/): <b>%s</b></string>
    <string name="hint_card_number">Número de Tarjeta</string>
    <string name="hint_expiration_date">MM/AA</string>
    <string name="hint_csv">CSV</string>
    <string name="hint_account_number">Número de Cuenta</string>
    <string name="hint_cant">Monto</string>
    <string name="hint_change">Cambio + Interés</string>
    <string name="hint_bank">Seleccionar Banco</string>
    <string name="hint_type">Seleccionar Tipo de Préstamo</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_actual_password">Actual Contraseña</string>
    <string name="hint_new_password">Nueva Contraseña</string>
    <string name="hint_confirm_password">Repetir Contraseña</string>
    <string name="hint_loan_type">Tipo de préstamo deseado</string>
    <string name="hint_loan_amount">Monto de préstamo</string>
    <string name="srt_email_not_valid">El correo ingresado no es válido</string>
    <string name="str_validate_pass">No debe ser menor de 6 caracteres</string>
    <string name="str_register_validate_password">Ingrese su Contraseña</string>
    <string name="str_register_validate_dni">Ingrese su Dni</string>
    <string name="str_validate_dni">El DNI debe contener 8 caracteres</string>
    <string name="str_validate_phone">No debe ser menor de 9 caracteres</string>
    <string name="str_register_validate_email_valid">Ingrese un correo válido</string>
    <string name="str_register_validate_phone">Ingrese su teléfono</string>
    <string name="str_register_validate_bank">Seleccione un Banco</string>
    <string name="str_register_validate_card_name">Ingrese el nombre del titular de la tarjeta</string>
    <string name="str_register_validate_count">Ingrese el número de su cuenta</string>
    <string name="str_register_validate_card">Ingrese su número de tarjeta</string>
    <string name="str_register_validate_csv">Ingrese el reverso de su tarjeta</string>
    <string name="str_register_validate_month">Ingrese la fecha de vencimiento</string>
    <string name="str_evaluate_validate_loan_type">Seleccione el tipo de prestamo</string>
    <string name="str_evaluate_validate_loan_amount">Ingrese el monto del prestamo</string>
    <string name="str_register_validate_mount">Ingrese la cantidad a recibir</string>
    <string name="str_register_validate_name">Ingrese su nombre</string>
    <string name="srt_exist_email">El correo ingresado ya existe</string>
    <string name="str_register_validate_email_not_empty">Ingrese su correo</string>
    <string name="str_register_validate_lastname">Ingrese su apellido</string>
    <string name="str_register_validate_date">Ingrese su fecha de nacimiento</string>
    <string name="str_btn_ready">Listo</string>
    <string name="str_btn_next">Siguiente</string>
    <string name="str_logout_question">¿Seguro que desea cerrar sesión?</string>
    <string name="str_disposition_money">Efectivo Inmediato</string>
    <string name="str_credit_evaluation">Evaluación Crediticia</string>
    <string name="str_change_money">Cambio y Venta de Dolar</string>
    <string name="str_history">Movimientos</string>
    <string name="str_soon">Muy pronto esta función estará disponible para todos los usuarios</string>
    <string name="str_register">Registrarse</string>
    <string name="str_login">Login</string>
    <string name="str_welcome">Bienvenido</string>
    <string name="str_birthday_date">Fecha de Nacimiento</string>
    <string name="str_begin">Empecemos</string>
    <string name="str_confirmation">Confirmación de Número de Cuenta</string>
    <string name="str_verify">Verifica el Número de Cuenta ingresado</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_ok">OK</string>
    <string name="str_valid_process">Proceso Válido</string>
    <string name="str_back_home">Regresar al Home</string>
    <string name="str_title_slide_1">100% Virtual</string>
    <string name="str_description_slide_1">Somos agencia financiera virtual que ofrece tres servicios innovadores y 100% seguros.</string>
    <string name="str_change_password">Cambiar contraseña</string>
</resources>