<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_connection_error"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round"
    android:gravity="center"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="5dp"
    android:paddingTop="5dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wifi"
        android:tint="@color/colorWhite"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_oh_no"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_verify_connection"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:paddingTop="15dp"
        android:textSize="11sp"
        android:text="@string/str_verify_connection_server"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"/>

</LinearLayout>