<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SliderFragment"
    android:orientation="vertical"
    android:background="@drawable/drawable_gradient_blue"
    android:gravity="top">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/img_slide_1"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/str_title_slide_1"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/str_description_slide_1"
        android:paddingTop="20dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:gravity="center"
        android:textSize="16sp"/>

</LinearLayout>