<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_back_menu"
        android:contentDescription="@string/app_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="90dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/drawable_border_linear"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/question"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:src="@drawable/selector_button_question"
                    android:contentDescription="@string/app_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_step_1"
                        android:textColor="@color/colorGrayDark"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/check_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/colorAccent"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_check"/>

                </LinearLayout>

                <Button
                    android:id="@+id/s1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector_button"
                    android:text="@string/str_take_pic"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/str_take_pic_info"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_step_2"
                        android:textColor="@color/colorGrayDark"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/check_signature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/colorAccent"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_check"/>

                </LinearLayout>

                <Button
                    android:id="@+id/s2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector_button"
                    android:text="@string/str_signature"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/str_signature_info"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_step_3"
                    android:textColor="@color/colorGrayDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/s3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/drawable_border_button_gray"
                    android:text="@string/str_finish_proccess"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

            <ImageView
                android:id="@+id/back"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_arrow_back"
                android:padding="10dp"
                android:tint="@color/colorWhite"
                android:foreground="?android:attr/selectableItemBackground"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/str_disposition_money"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="45dp"
                android:src="@drawable/img_profile_disposition"
                android:contentDescription="@string/app_name" />

        </FrameLayout>

    </ScrollView>

</FrameLayout>