<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_back_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_valid_process" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_valid_process"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_cancel"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="21sp"/>
        <Button
            android:id="@+id/btn_back_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_border_button"
            android:text="@string/str_back_home"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"/>

    </LinearLayout>
</FrameLayout>